--- a/Client/package.json
+++ b/Client/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.3",
     "@mui/material": "^5.15.4",
     "@mui/styled-engine-sc": "^6.0.0-alpha.12",
+    "@reduxjs/toolkit": "^2.2.1",
     "@stripe/react-stripe-js": "^2.4.0",
     "@tanstack/react-query": "^5.17.10",
     "axios": "^1.6.5",
@@ -25,6 +26,7 @@
     "react-fast-marquee": "^1.6.4",
     "react-icons": "^5.0.0",
     "react-rating": "^2.0.5",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.1",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.8"
