--- a/Client/package.json
+++ b/Client/package.json
@@ -24,10 +24,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.4",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.0",
     "react-rating": "^2.0.5",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.1",
+    "react-toastify": "^10.0.4",
+    "redux-thunk": "^3.1.0",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.8"
   },
